methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:15: error: Unmatched closing brace '}' ignored here
}
^